[build-system]
requires = ['setuptools>=64.0.0', 'build']
build-backend = 'setuptools.build_meta'

[project]
name = 'corvx'
dynamic = ['version']
description = 'An unofficial X SDK for Python'
authors = [{ name = 'Rodrigo Martínez', email = 'dev@brunneis.com' }]
license = { text = 'GNU General Public License v3 (GPLv3)' }
readme = 'README.md'
requires-python = '>=3.10'
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
dependencies = ['requests', 'ordered-set']

[project.urls]
Repository = 'https://github.com/labteral/corvx'

[project.optional-dependencies]
dev = ['build', 'installer', 'wheel', 'twine']

[tool.setuptools.packages.find]
where = ['.']
include = ['corvx*']

[tool.setuptools]
package-data = { 'corvx' = ['*'] }
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = 'corvx.version.__version__' }
